--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 /* Importing */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+html{
+    scroll-snap-type:y proximity;
+}
+
+section{
+    scroll-snap-align: start;
+}
 
 * {
     margin: 0;
