--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 html{
-    scroll-snap-type:y proximity;
+    scroll-snap-type:y mandatory;
 }
 
 section{
-    scroll-snap-align: start;
+    scroll-snap-align: center;
 }
 
 * {
