--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 html{
-    scroll-snap-type:y mandatory;
+    scroll-snap-type:y proximity;
 }
 
 section,footer,header{
