--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ header {
 /* Gradient Background */
 body {
     background: url(./Graphics/Gradient.png) no-repeat;
+    background-size: auto;
+
 
 } 
 body::-webkit-scrollbar{
