--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
 body {
     background: url(./Graphics/Gradient.png) no-repeat;
     object-fit: fill;
-
+    
 
 } 
 body::-webkit-scrollbar{
@@ -30,6 +30,14 @@ body::-webkit-scrollbar-track{
 }
 body::-webkit-scrollbar-thumb{
     background-color: #00D897;
+}
+
+.hero{
+    background-image: url(./Graphics/hero_background1.png);
+    background-size: auto;
+    background-position: right center;
+    background-repeat: no-repeat;
+
 }
 
 li a {
