--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ html {
     font-family: 'Montserrat', sans-serif;
 }
 
-/* Gradient Background */
-body {
+Gradient Background
+ body {
     background: url(./Graphics/Gradient.png) no-repeat;
     object-fit: fill;
     
 
-} 
+}  
 body::-webkit-scrollbar{
     width: 0.25rem;
 }
@@ -38,6 +38,26 @@ body::-webkit-scrollbar-thumb{
     background-position: right center;
     background-repeat: no-repeat;
 
+}
+
+ul li a {
+    font-weight: bold;
+    position: relative;
+}
+
+nav ul li a:before {
+    content: "";
+    position: absolute;
+    bottom: -3px;
+    height: 5px;
+    width: 0;
+    background: #00D897;
+    border-radius: 50px;
+    transition: width 0.3s ease;
+}
+
+nav ul li a:hover:before {
+    width: 100%;
 }
 
 li a {
