--- a/style.css
+++ b/style.css
@@ -14,13 +14,7 @@ html {
     font-family: 'Montserrat', sans-serif;
 }
 
-Gradient Background
- body {
-    background: url(./Graphics/Gradient.png) no-repeat;
-    object-fit: fill;
-    
 
-}  
 body::-webkit-scrollbar{
     width: 0.25rem;
 }
@@ -33,9 +27,9 @@ body::-webkit-scrollbar-thumb{
 }
 
 .hero{
-    background-image: url(./Graphics/hero_background1.png);
-    background-size: auto;
-    background-position: right center;
+    background-image: url(./Graphics/School-01.png);
+    background-size: 100vw;
+    background-position: right top;
     background-repeat: no-repeat;
 
 }
